# sms-panel

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: django.yml
applications/api/: apps.py  urls.py
applications/authentication/: urls.py
applications/common/: apps.py
applications/phone_numbers/: apps.py  models.py
applications/senders/: apps.py  models.py
applications/support_user/: apps.py  models.py
applications/user/: admin.py  apis.py  apps.py  models.py  urls.py
apps/api/: apps.py  mixins.py  pagination.py  urls.py
apps/authentication/: apis.py  serializers.py  urls.py
apps/common/: apps.py  fields.py
apps/message/: admin.py  apps.py  enums.py  models.py  seeder.py
apps/notification/: admin.py  apps.py  enums.py  models.py  seeder.py  signals.py
apps/payments/: admin.py  apps.py  enums.py  models.py  seeder.py
apps/phone_numbers/: admin.py  apps.py  enums.py  models.py
apps/phonebook/: admin.py  apis.py  apps.py  models.py  seeder.py  serializers.py  urls.py
apps/senders/: admin.py  apis.py  apps.py  enums.py  models.py  seeder.py  serializers.py  urls.py
apps/support_user/: admin.py  apps.py  models.py  seeder.py
apps/user/: apis.py  apps.py  enums.py  models.py  seeder.py  serializers.py  urls.py
apps/utils/: token_generator.py  validators.py
config/: urls.py  wsgi.py
config/django/: base.py  local.py  production.py  test.py
docker/: local.Dockerfile  production.Dockerfile
(+49 files in other folders)
